# avs-hw-1

./: CMakeLists.txt  README.md  build.sh  shell.nix
src/: buffer.c  buffer.h  circle.c  circle.h  color.c  color.h  main.c  point.c  point.h  rectangle.c  rectangle.h  shape.c  shape.h  task.c  triangle.c  triangle.h  vector.c  vector.h
tests/: 1.in
